[package]
name = "token_bucket"
version = "0.1.0"
edition = "2021"

[dependencies]
futures-timer = "3.0.2"
log = "0.4.19"
nonzero_ext = "0.3.0"
once_cell = "1.18.0"
rand = "0.8.5"
strum = "0.25.0"
strum_macros = "0.25.2"

[dev-dependencies]
test-log = "0.2.12"
futures = "0.3.28" # can be removed?
env_logger = "0.10.0"
tokio = { version = "1.29.1", features = ["full"] }